# Free_Guy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  GOOGLE_OAUTH_FIX.md  README.md  docker-compose.yml  vercel.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
backend_server/: Dockerfile.py  back_end.log.2024-07-19  conftest.py  constant.py  db_persistence.py  exceptions.py  global_methods.py  maze.py  path_finder.py  pyproject.toml  requirements.txt  reverie.py  test.py
backend_server/common/: __init__.py  logging.py
backend_server/llm/: __init__.py  factory.py  ollama_provider.py  openai_provider.py  protocol.py
backend_server/persona/: persona.py
backend_server/persona/cognitive_modules/: action_planning.py  converse.py  daily_planning.py  execute.py  perceive.py  plan.py  reaction_planning.py  reflect.py  retrieve.py
backend_server/persona/memory_structures/: associative_memory.py  scratch.py  spatial_memory.py
backend_server/persona/prompt_template/: defunct_run_gpt_prompt.py  gpt_structure.py  llm_bridge.py  ollama_structure.py  print_prompt.py  run_gpt_prompt.py
backend_server/persona/prompt_template/prompts/: action.py  conversation.py  perception.py  planning.py  reflection.py  utils.py
backend_server/persona/prompt_template/v1/: action_location_object_vMar11.txt
backend_server/persona/prompt_template/v2/: daily_planning_v6.txt  generate_hourly_schedule_v2.txt  task_decomp_v3.txt  wake_up_hour_v1.txt
backend_server/tests/: test_execute_converse.py  test_perceive_retrieve.py  test_plan_reflect.py  test_smoke.py
backend_server/utils/: compress_sim_storage.py  db_utils.py  global_methods.py  qdrant_utils.py
design-system/: README.md  SKILL.md  colors_and_type.css
design-system/preview/: brand-cover-art.html  brand-portraits.html  brand-sprite-sheet.html  brand-wordmark.html  color-derived-tints.html  color-foreground-ladder.html  color-primary-palette.html  color-semantic-bg.html  components-badges.html  components-buttons.html  components-card.html  components-empty.html  components-inputs.html  components-nav.html  components-steps.html  spacing-borders.html  spacing-grid-backdrop.html  spacing-scale.html  spacing-shadows.html  type-body-and-mono.html  type-case-tracking.html  type-display-scale.html
design-system/reference/frontend/: App.tsx  index.css
design-system/reference/frontend/api/: characters.ts  client.ts
design-system/reference/frontend/components/: Header.tsx
design-system/reference/frontend/game/: GameCanvas.tsx
design-system/reference/frontend/hooks/: useSimulationSSE.ts
design-system/reference/frontend/pages/: CharactersPage.tsx  CreateCharacterPage.tsx  CreateSimulationPage.tsx  DemoPage.tsx  EditCharacterPage.tsx  RegisterPage.tsx  ReplayPage.tsx  SimulatePage.tsx
design-system/ui_kits/reverie_pixel_town/: CharactersPage.jsx  DashboardPage.jsx  Header.jsx  LandingPage.jsx  LoginPage.jsx  ObservePage.jsx  Primitives.jsx  README.md  index.html
frontend/: .env.example  Dockerfile  eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/api/simulations/[id]/: stream.ts
frontend/public/: assets
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  characters.ts  client.ts  maps.ts  simulations.ts
frontend/src/components/: Header.tsx  Primitives.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/game/: GameCanvas.tsx
frontend/src/hooks/: useSimulationSSE.ts  useSimulationWebSocket.ts
frontend/src/pages/: CharactersPage.tsx  CreateCharacterPage.tsx  CreateSimulationPage.test.tsx  CreateSimulationPage.tsx  DashboardPage.tsx  DemoPage.tsx  EditCharacterPage.tsx  ExplorePage.tsx  InvitesPage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx  ReplayPage.tsx  SimulatePage.tsx  SimulationSettingsPage.tsx
frontend_server/: Dockerfile.py  db.sqlite3  django.log.2024-07-10  global_methods.py  pyproject.toml  qdrant_utils.py  requirements.txt
frontend_server/frontend_server/: asgi.py  urls.py  utils.py
frontend_server/frontend_server/settings/: __init__.py  base.py  development.py  local.py  production.py
frontend_server/static_dirs/assets/characters/: atlas.json
frontend_server/static_dirs/assets/the_ville/matrix/: maze_meta_info.json
frontend_server/static_dirs/assets/the_ville/visuals/: the_ville_dec31.json  the_ville_jan7.json  the_ville_old.json
frontend_server/storage/next_3_people_1/reverie/: meta.json
frontend_server/temp_storage/: curr_sim_code.json
frontend_server/templates/: base_retro.html
frontend_server/templates/account/: login.html  signup.html
frontend_server/templates/home/: main_script.html  main_script_old_dolores.html
frontend_server/templates/socialaccount/: login.html  signup.html
frontend_server/translator/: admin.py  api_views.py  apps.py  auth_views.py  authentication.py  character_views.py  consumers.py  maps_views.py  models.py  simulation_runner.py  simulation_views.py  social_auth_views.py  tests.py  views.py
frontend_server/translator/management/commands/: export_simulation.py  import_demo.py  import_simulation.py  setup_social_auth.py
frontend_server/translator/migrations/: 0006_initial.py  0007_simulation_extra_fields_persona.py  0008_personascratch.py  0009_demo_conversation_tables.py  0010_alter_conceptnode_id_alter_conversation_id_and_more.py  0011_conceptnode_keywordstrength.py  0012_spatialmemory_runtimestate_demo_demomovement_conversationparticipant.py  0013_rename_conceptnode_indexes.py  0014_add_map_model.py  0015_seed_the_ville_map.py  0016_add_simulation_owner_visibility.py  0017_add_character_model.py  0018_add_simulation_membership_model.py  0019_add_character_living_area.py  0020_add_game_obj_cleanup_and_step_cache.py
nginx/: nginx.conf
reverie/backend_server/: reverie.py
scripts/ralph/: .last-branch  prd.json  progress.txt  ralph.sh
skills/: cloud_agents_starter_skill.md
tasks/: prd-postgres-migration.md  prd-refactor-upgrade.md  user_flows_design_documentation.md
test/: emb.py
(+8 files in other folders)
