[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "free-guy-backend"
version = "0.1.0"
description = "Generative Agents simulation backend server"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "async-generator==1.10",
    "async-timeout==4.0.3",
    "attrs==25.3.0",
    "boto==2.49.0",
    "botocore==1.38.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cycler==0.12.1",
    "dj-database-url==3.1.2",
    "Django==2.2",
    "django-cors-headers==2.5.3",
    "django-storages-redux==1.3.3",
    "exceptiongroup==1.2.2",
    "frozenlist==1.5.0",
    "gensim==4.4.0",
    "gunicorn==25.1.0",
    "h11==0.14.0",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "jmespath==1.0.1",
    "joblib>=1.4.2",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.8",
    "multidict==6.4.3",
    "nltk==3.9.3",
    "numpy==2.2.6",
    "openai==2.26.0",
    "outcome==1.3.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "patsy==1.0.2",
    "Pillow==12.1.1",
    "psycopg2-binary==2.9.11",
    "pycparser==2.22",
    "pyparsing==3.2.3",
    "PySocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.0.0",
    "pytz==2025.2",
    "regex==2026.2.28",
    "requests==2.32.5",
    "s3transfer==0.11.3",
    "scikit-learn==1.7.2",
    "scikit-posthocs==0.12.0",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "selenium==4.31.0",
    "six==1.17.0",
    "smart-open==7.5.1",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "sqlparse==0.5.3",
    "statsmodels==0.14.6",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.3",
    "trio==0.29.0",
    "trio-websocket==0.11.1",
    "trueskill==0.4.5",
    "typing-extensions==4.15.0",
    "urllib3==2.4.0",
    "wsproto==1.2.0",
    "yarl==1.20.0",
    "yellowbrick==1.5",
    "zipp==3.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = false
explicit_package_bases = true
exclude = ["Dockerfile\\.py", "test\\.py"]

[[tool.mypy.overrides]]
module = "global_methods"
# numpy.std() returns numpy.floating[Any] — pre-existing mismatch with float annotation.
ignore_errors = true

[tool.ruff]
line-length = 120
exclude = [
    "Dockerfile.py",
    ".git",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (includes F401 unused imports)
    "I",   # isort (import sorting)
    "E722", # bare except
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# Legacy files with complex imports that can't be easily sorted
"persona/prompt_template/gpt_structure.py" = ["I001"]
# Cognitive modules use `if debug: print()` single-line pattern throughout
"persona/cognitive_modules/action_planning.py" = ["E701"]
"persona/cognitive_modules/converse.py" = ["E701"]
"persona/cognitive_modules/daily_planning.py" = ["E701"]
"persona/cognitive_modules/reaction_planning.py" = ["E701"]
"persona/cognitive_modules/reflect.py" = ["E701"]
# Prompt modules use single-line validation patterns and `!= False` sentinel checks
"persona/prompt_template/prompts/action.py" = ["E701", "E712"]
"persona/prompt_template/prompts/conversation.py" = ["E712"]
"persona/prompt_template/prompts/perception.py" = ["E712"]
"persona/prompt_template/prompts/planning.py" = ["E701", "E712"]
"persona/prompt_template/prompts/reflection.py" = ["E712"]
# maze.py uses compact for-loop style for dict building
"maze.py" = ["E701"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
